diskann-quantization/tests/compile-fail/multi/matmut_reborrow.stderr
error[E0502]: cannot borrow `view` as mutable because it is also borrowed as immutable
  --> tests/compile-fail/multi/matmut_reborrow.rs:16:13
   |
14 |     let immut_view = view.reborrow();
   |                      ---- immutable borrow occurs here
15 |     // This should fail: we cannot mutably borrow `view` while `immut_view` exists
16 |     let _ = view.get_row_mut(0);
   |             ^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
17 |     let _ = immut_view.num_vectors();
   |             ---------- immutable borrow later used here
